k8s-security-lab-main/1-networkpolicy-limitrange-resourcequota/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: pro-security
    project: pro-security
  name: pro-security
spec:
  finalizers:
  - kubernetes
