k8s-security-lab-main/1-networkpolicy-limitrange-resourcequota/app-team1.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: app-team1
  namespace: pro-security
  labels:
    role: team1
spec:
  containers:
  - image: drupal
    name: app-team1
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
