k8s-security-lab-main/1-networkpolicy-limitrange-resourcequota/app-team2.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: app-team2
  namespace: pro-security
  labels:
    role: team2
spec:
  containers:
  - image: nginx
    name: app-team2
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
